add get policy swagger
