# SampleApplication/application/org1/api/v1/vehicle/controller.js
@@ -172,17 +172,15 @@ exports.getVehicle = async (req, res, next) => {
     const contract = network.getContract('vehicle-manufacture');
 
     // Evaluate the specified transaction.
-    let result, rawResult;
-
+    let result;
     if (req.query.id) {
     // if vehicle id specified queryVehicle transaction - requires 1 argument, ex: ('queryVehicle', 'vehicle4')
       result = await contract.evaluateTransaction('queryVehicle', req.query.id);
-      rawResult = result.toString();
     } else {
       // queryAllVehicles transaction - requires no arguments, ex: ('queryAllVehicless')
       result = await contract.evaluateTransaction('queryAllVehicles');
-      rawResult = result.toString();
     }
+    const rawResult = result.toString();
     const obj = JSON.parse(rawResult);
     return res.send({
       result: obj
@@ -302,60 +300,14 @@ exports.getPolicy = async (req, res, next) => {
     const contract = network.getContract('vehicle-manufacture');
 
     // Evaluate the specified transaction.
-    let result, rawResult;
-
+    let result;
     if (req.query.id) {
-    // if policy id specified getPolicy transaction - requires 1 argument, ex: ('getPolicy', 'policy123')
       result = await contract.submitTransaction('getPolicy', req.query.id);
-      rawResult = result.toString();
     } else {
-      throw new Error('Not Policy found');
+      result = await contract.evaluateTransaction('getPolicies');
     }
-    const json = JSON.parse(rawResult);
-    const obj = JSON.parse(json);
-    return res.send({
-      result: obj
-    });
-  } catch (err) {
-    console.log(err);
-    next(err);
-  }
-};
-
-exports.getPolicies = async (req, res, next) => {
-  try {
-    const enrollmentID = req.headers['enrollment-id'];
-
-    // get connection profile
-    const ccp = await utils.getCCP();
-
-    // Check to see if we've already enrolled the user.
-    const userExists = await wallet.exists(enrollmentID);
-    if (!userExists) {
-      return res.status(401).send({
-        message: `An identity for the user ${enrollmentID} does not exist in the wallet`
-      });
-    }
-
-    // Create a new gateway for connecting to our peer node.
-    const gateway = new Gateway();
-    await gateway.connect(ccp, { wallet, identity: enrollmentID, discovery: { enabled: false } });
-
-    // Get the network (channel) our contract is deployed to.
-    const network = await gateway.getNetwork('mychannel');
-
-    // Get the contract from the network.
-    const contract = network.getContract('vehicle-manufacture');
-
-    // Evaluate the specified transaction.
-    let result, rawResult;
-
-    // getPolicies transaction - requires no arguments, ex: ('getPolicies')
-    result = await contract.evaluateTransaction('getPolicies');
-    rawResult = result.toString();
-
-    const json = JSON.parse(rawResult);
-    const obj = JSON.parse(json);
+    const rawResult = result.toString();
+    const obj = JSON.parse(rawResult);
     return res.send({
       result: obj
     });
